creation des formulaires

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,5 @@
-<?php 
-    $heroName =$_GET["#heroName"].value;
-?>
 <!DOCTYPE html>
-<html lang="fr">
+<html>
     <head>
         <meta charset="utf-8" />
         <title>
@@ -18,7 +15,7 @@
             <section>
                 <h2>Quel est votre nom, héros ?</h2>
                 <div>
-                    <form method="get" action="page-1.phtml">
+                    <form method="get" action="index.phtml">
                         <div>
                             <input type="text" name="heroName" id="heroName" />
                         </div>
